JDBC-4610 OJVM code inputs (refactoring - wrapper builder simplification / code formatting)